Inclusão de links

--- a/index.html
+++ b/index.html
@@ -10,19 +10,32 @@
     <h1>Felipe Moreira da Cruz</h1>
     <img src="/Minha Foto.jpg" alt="Felipe Moreira da Cruz" width="300px">
    <p>Curtindo um dia na natureza</p>
-   <h4><em>Olá, meu nome é <strong>Felipe Moreira da Cruz</strong>, sou brasileiro, moro em São Miguel do Iguaçu, interior do Paraná, e estou iniciando a jornada de Web
-       Developer na Trybe. Formado em administração e gestão financeira, e da vida acadêmica levo uma premiação da qual me orgulho muito: Vice-Campeão do Desafio Sebrae
+   <h2><strong>Quem sou eu?</strong></h2>
+   <h4 id="eu"><em>Olá, meu nome é <strong>Felipe Moreira da Cruz</strong>, sou brasileiro, moro em São Miguel do Iguaçu, interior do Paraná, e estou iniciando a jornada de Web
+       Developer na Trybe. Formado em administração e gestão financeira, e da vida acadêmica levo uma premiação da qual me orgulho muito: Vice-Campeão Paranaense do Desafio Sebrae
        2010, uma competição de empreendedorismo aonde participaram mais de 20 mil pessoas. Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha;
        Fui funcionário público durante 8 anos, trabalhei na parte administrativa e de sistemas de saúde pública e também como consultor na mesma área. 
        Confesso que me acomodei no cargo publico, mas aqui estou eu de novo, com 35 anos, transitando para uma nova carreira. 
-       <h2>Minhas principais habilidades são:</em></h2>
+       <h2 id="habilidades">Minhas principais habilidades são:</em></h2>
        <ul>
-           <li>Tenho uma boa visão global </li>
+           <li>Visão global </li>
            <li>Autodidata</li>
            <li>Organizado</li>
+           <li>Observador</li>
+        <h2 id="linguagem">Atualmente, estou estudando:</h2>
+        <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ol>
+        <p>Conforme for melhorando minhas skills como web developer, essa pagina será atualizada! </p>
        </ul>
+       <h2>Sumário</h2>
        <a href="/Minha Foto.jpg"> Minha foto</a> <br>
-       <a href="https://www.tecmundo.com.br/" target="_blank"> Meu blog favorito</a>
+       <a href="https://www.tecmundo.com.br/" target="_blank"> Meu blog favorito</a> <br>
+       <a href="#eu">Sobre mim</a>
+       <a href="#habilidades">SKills</a> <br>
+       <a href="#linguagem">Linguagens de Programação</a>
        
    
 </body>
