--- a/index.html
+++ b/index.html
@@ -4,39 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Felipe Moreira da CRuz</title>
+    <style>
+        body {
+            font-family: monospace;
+            background-color: #081c15;
+            color: #b7e4c7;
+            text-align: center;
+        }
+        img {
+            border-radius: 50%;
+        }
+        h1 {
+            font-size: 70px;
+        }
+        h2 {
+            font-size: 50px;
+        }
+        .size {
+            font-size:20px;
+        }
+
+
+    </style>
+
 </head>
 <body>
     <h1>Felipe Moreira da Cruz</h1>
-    <img src="/Minha Foto.jpg" alt="Felipe Moreira da Cruz" width="300px">
+    <img src="/Minha Foto.jpg" alt="Felipe Moreira da Cruz" width="500px">
    <p>Curtindo um dia na natureza</p>
    <h2><strong>Quem sou eu?</strong></h2>
-   <h4 id="eu"><em>Olá, meu nome é <strong>Felipe Moreira da Cruz</strong>, sou brasileiro, moro em São Miguel do Iguaçu, interior do Paraná, e estou iniciando a jornada de Web
-       Developer na Trybe. Formado em administração e gestão financeira, e da vida acadêmica levo uma premiação da qual me orgulho muito: Vice-Campeão Paranaense do Desafio Sebrae
-       2010, uma competição de empreendedorismo aonde participaram mais de 20 mil pessoas. Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha;
-       Fui funcionário público durante 8 anos, trabalhei na parte administrativa e de sistemas de saúde pública e também como consultor na mesma área. 
-       Confesso que me acomodei no cargo publico, mas aqui estou eu de novo, com 35 anos, transitando para uma nova carreira. 
+   <h4 id="eu" class="size"><em>Olá, meu nome é <strong>Felipe Moreira da Cruz</strong>, casado, brasileiro, resido em São Miguel do Iguaçu, interior do Paraná, e estou iniciando a jornada de Desenvolvedor Web na Trybe.
+    Possuo duas formações acadêmicas: Administração e Tecnólogo em Gestão Financeira. Da vida acadêmica trago comigo uma premiação da qual me orgulho muito:
+    <em>Vice-Campeão Paranaense do Desafio Sebrae 2010</em>, uma competição de empreendedorismo onde participaram mais de 22 mil acadêmicos. Fui funcionário público por 8 anos, locado
+    na secretaria de saúde municipal, exercendo funções administrativas e coordenando sistemas Datasus. Esse conhecimento adquirido nesse período me permitiu prestar consultoria na área
+    quando deixei o serviço público. <br>
+       Nesse processo de autoconhecimento (na qual ainda estou), percebi que um dos meus erros foi ter deixado me acomodar pela estabilidade do serviço publico.
+       Apaixonado por computadores e tecnologia desde criança, juntei minhas aptidões e minha paixão para aprender uma nova profissão.
+       E cá estou eu, com 35 anos, em transição de carreira, me apaixonando pela jornada e mergulhado de cabeça na Trybe para me tornar um Desenvolvedor Web.
+
        <h2 id="habilidades">Minhas principais habilidades são:</em></h2>
-       <ul>
+       <ul class="size">
            <li>Visão global </li>
            <li>Autodidata</li>
            <li>Organizado</li>
            <li>Observador</li>
         <h2 id="linguagem">Atualmente, estou estudando:</h2>
-        <ol>
+        <ol class="size">
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
+            <li>E crescrendo...</li>
         </ol>
-        <p>Conforme for melhorando minhas skills como web developer, essa pagina será atualizada! </p>
+        <p>Conforme for melhorando minhas skills como Desenvolvedor Web, essa pagina será aprimorada aos poucos </p>
        </ul>
        <h2>Sumário</h2>
-       <a href="/Minha Foto.jpg"> Minha foto</a> <br>
-       <a href="https://www.tecmundo.com.br/" target="_blank"> Meu blog favorito</a> <br>
-       <a href="#eu">Sobre mim</a>
-       <a href="#habilidades">SKills</a> <br>
-       <a href="#linguagem">Linguagens de Programação</a>
-       
-   
+       <a href="/Minha Foto.jpg" class="size"> Minha foto</a> <br>
+       <a href="https://www.tecmundo.com.br/" target="_blank" class="size"> Meu blog favorito</a> <br>
+       <a href="#eu" class="size">Sobre mim</a><br>
+       <a href="#habilidades" class="size">SKills</a> <br>
+       <a href="#linguagem" class="size">Linguagens de Programação</a>
+
+
 </body>
 </html>
